--- a/charts/appmgr/templates/deployment.yaml
+++ b/charts/appmgr/templates/deployment.yaml
@@ -34,8 +34,20 @@ spec:
               value: {{ $value | quote }}
             {{- end }}
           volumeMounts:
-            {{- toYaml .Values.volumeMounts | nindent 12 }}
-          volumes:
-            {{- toYaml .Values.volumes | nindent 8 }}
+            - name: routes-rtg
+              mountPath: /opt/ric/config/router.txt
+              subPath: routes.rtg
+            - name: appmgr-config
+              mountPath: /opt/ric/config/appmgr.yaml
+              subPath: appmgr.yaml
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+
+      # Volumes must be defined at the same level as 'containers'
+      volumes:
+        - name: routes-rtg
+          configMap:
+            name: routes-rtg
+        - name: appmgr-config
+          configMap:
+            name: appmgr-config
