--- a/charts/appmgr/templates/deployment.yaml
+++ b/charts/appmgr/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-appmgr-deployment
+  name: {{ .Release.Name }}-deployment
   labels:
     app: appmgr
 spec:
