--- a/charts/dbaas/templates/service.yaml
+++ b/charts/dbaas/templates/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-dbaas-service
+  name: {{ .Release.Name }}-service
   labels:
     app: dbaas
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 6379
+      targetPort: 6379
       protocol: TCP
       name: redis
   selector:
