--- a/charts/submgr/templates/service.yaml
+++ b/charts/submgr/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-submgr-service
+  name: {{ .Release.Name }}-service
   labels:
     app: submgr
 spec:
