--- a/charts/submgr/templates/deployment.yaml
+++ b/charts/submgr/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
-          command: ./submgr -f $CFG_FILE
+          command: ["./submgr", "-f $CFG_FILE"]
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
