--- a/charts/e2mgr/values.yaml
+++ b/charts/e2mgr/values.yaml
@@ -9,11 +9,6 @@ service:
   type: ClusterIP
   port: 3800
 
-command: "./main"
-args:
-  - "-port=3800"
-  - "-f"
-  - "/opt/E2Manager/resources/configuration.yaml"
 
 env:
   CONTAINER_NAME: "ric_e2mgr"
@@ -24,7 +19,7 @@ env:
   RMR_SRC_ID: "10.0.2.11"
 
 volumeMounts:
-  - name: routes-rtg
+  - name: e2mgr-rtg
     mountPath: /opt/E2Manager/router.txt
     subPath: routes.rtg
   - name: e2mgr-config
@@ -32,9 +27,9 @@ volumeMounts:
     subPath: e2mgr.yaml
 
 volumes:
-  - name: routes-rtg
+  - name: e2mgr-rtg
     configMap:
-      name: routes-rtg
+      name: e2mgr-rtg
   - name: e2mgr-config
     configMap:
       name: e2mgr-config
