--- a/charts/rtmgr/values.yaml
+++ b/charts/rtmgr/values.yaml
@@ -1,13 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: rtmgr-sim
+  repository: nexus3.o-ran-sc.org:10002/o-ran-sc/ric-plt-rtmgr
   pullPolicy: IfNotPresent
-  tag: "i-release" # Use .Values.global.tag or specific tag
-
-service:
-  type: ClusterIP
-  port: 12020
+  tag: "0.3.8" # Use .Values.global.tag or specific tag
 
 env:
   CONTAINER_NAME: "ric_rtmgr-sim"
