--- a/charts/rtmgr/templates/service.yaml
+++ b/charts/rtmgr/templates/service.yaml
@@ -1,15 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-rtmgr-sim-service
+  name: {{ .Release.Name }}-service
   labels:
-    app: rtmgr-sim
+    app: rtmgr
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 3800
       protocol: TCP
-      name: rtmgr-sim
+      name: "http"
+      targetPort: 3800
+    - port: 4561
+      protocol: TCP
+      targetPort: 4561
+      name: "rmrroute"
+    - port: 4560
+      protocol: TCP
+      targetPort: 4560
+      name: "rmrdata"
   selector:
-    app: rtmgr-sim
+    app: rtmgr
