--- a/charts/rtmgr-sim/templates/service.yaml
+++ b/charts/rtmgr-sim/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-rtmgr-sim-service
+  name: {{ .Release.Name }}-service
   labels:
     app: rtmgr-sim
 spec:
