--- a/charts/e2mgr/templates/service.yaml
+++ b/charts/e2mgr/templates/service.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: e2mgr
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
+  clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
