--- a/charts/python_xapp_runner/templates/service.yaml
+++ b/charts/python_xapp_runner/templates/service.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: python_xapp_runner
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
+  clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
