--- a/charts/submgr/templates/submgr-config.yaml
+++ b/charts/submgr/templates/submgr-config.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   submgr-config.yaml: |
     "local":
-      "host": "10.0.2.13:8080"
+      "host": "submgr-service:8080"
     "logger":
       "level": 1
     "rmr":
@@ -13,12 +13,12 @@ data:
       "maxSize": 8192
       "numWorkers": 1
     "rtmgr":
-      "hostAddr": "10.0.2.15"
+      "hostAddr": "rtmgr-service"
       "port"    : "12020"
       "baseUrl" : "/ric/v1"
     "db":
       "sessionNamespace": "XMSession"
-      "host": "10.0.2.12:6379"
+      "host": "dbaas-service:6379"
       "prot": "tcp"
       "maxIdle": 80
       "maxActive": 12000
