--- a/charts/submgr/templates/submgr-config.yaml
+++ b/charts/submgr/templates/submgr-config.yaml
@@ -18,7 +18,7 @@ data:
       "baseUrl" : "/ric/v1"
     "db":
       "sessionNamespace": "XMSession"
-      "host": "dbaas-service:6379"
+      "host": "10.128.1.123:6379"
       "prot": "tcp"
       "maxIdle": 80
       "maxActive": 12000
