--- a/charts/submgr/templates/service.yaml
+++ b/charts/submgr/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 8080
+      targetPort: 8080
       protocol: TCP
       name: submgr
   selector:
