--- a/charts/appmgr/templates/appmgr-config.yaml
+++ b/charts/appmgr/templates/appmgr-config.yaml
@@ -22,7 +22,7 @@ data:
       "tmpConfig": "/tmp/config-file.json"
     "db":
       "sessionNamespace": "XMSession"
-      "host": "10.0.2.12:6379"
+      "host": "dbaas-service:6379"
       "prot": "tcp"
       "maxIdle": 80
       "maxActive": 12000
