--- a/charts/submgr/values.yaml
+++ b/charts/submgr/values.yaml
@@ -9,6 +9,7 @@ env:
   CFG_FILE: "/opt/config/submgr-config.yaml"
   RMR_SEED_RT: "/opt/config/submgr-uta-rtg.rt"
   RMR_SRC_ID: "10.0.2.13"
+  DBAAS_SERVICE_HOST: dbaas-service  
 
 volumeMounts:
   - name: submgr-config
