--- a/charts/e2term/templates/deployment.yaml
+++ b/charts/e2term/templates/deployment.yaml
@@ -20,7 +20,9 @@ spec:
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
           ports:
             - containerPort: {{ .Values.service.port }}
-          command: ["/bin/sh", "-c", "./e2 -p config -f config.conf"]
+          command: ["/bin/sh", "-c"]
+            - mkdir /opt/e2/;
+              ./e2 -p config -f config.conf;
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
