--- a/charts/e2term/templates/deployment.yaml
+++ b/charts/e2term/templates/deployment.yaml
@@ -22,7 +22,8 @@ spec:
             - containerPort: {{ .Values.service.port }}
           command: ["/bin/sh", "-c"]
           args:
-            - sleep 10000;
+            - chmod -R 777 /opt/e2/
+              sleep 10000;
             # - mkdir /opt/e2/;
             #   ./e2 -p config -f config.conf;
           env:
