--- a/charts/e2term/templates/rbac.yaml
+++ b/charts/e2term/templates/rbac.yaml
@@ -16,11 +16,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Chart.Name }}-{{ .Release.Namespace }}-role
+  name: {{ .Chart.Name }}-{{ .Release.Namespace }}-binding
 subjects:
 - kind: ServiceAccount
   name: e2term-service-account
 roleRef:
   kind: Role
-  name: privileged-role
+  name: {{ .Chart.Name }}-{{ .Release.Namespace }}-role
   apiGroup: rbac.authorization.k8s.io
