--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -20,6 +20,9 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
+          command: [ "/bin/sh", "-c" ]
+          args:
+            - exec python3 -u /opt/xApps/xapp.py
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
