--- a/charts/python_xapp_runner/values.yaml
+++ b/charts/python_xapp_runner/values.yaml
@@ -17,16 +17,16 @@ env:
   RMR_RTG_SVC: "" # leave empty, so RMR works correctly with RT Manager Simulator
 
 volumeMounts:
-  - name: routes-rtg
+  - name: xapp-rtg
     mountPath: /opt/ric/config/uta-rtg.rt
     subPath: routes.rtg
   - name: script-volume
     mountPath: /opt/xApps/
 
 volumes:
-  - name: routes-rtg
+  - name: xapp-rtg
     configMap:
-      name: routes-rtg
+      name: xapp-rtg
   - name: script-volume
     configMap:
       name: xapp-script
