--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -9,8 +9,8 @@ data:
     {{ $files.Get . | trim | indent 4 }}
   {{- end }}
   
-  {{- $files := .Files.Glob "lib/*" }}
-  {{- range $path, $file := $files }}
+  {{- $libFiles := .Files.Glob "lib/*" }}
+  {{- range $path, $file := $libFiles }}
   {{ base $path }}: |
     {{ .Files.Get $path | nindent 8 }}
   {{- end }}
