--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -4,13 +4,16 @@ metadata:
   name: xapp-script
 data:
   {{- $files := .Files }}
+  
+  # Including specific files in the root directory
   {{- range tuple "xapp.py" "script2.py" }}
   {{ . }}: |-
     {{ $files.Get . | trim | indent 4 }}
   {{- end }}
-  
+
+  # Including all files inside the lib/ directory
   {{- $libFiles := .Files.Glob "lib/*" }}
   {{- range $path, $file := $libFiles }}
   {{ base $path }}: |
-    {{ $libFiles.Get $path | nindent 8 }}
+    {{ .Files.Get $path | nindent 8 }}
   {{- end }}
