--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -14,6 +14,6 @@ data:
   # Including all files inside the lib/ directory
   {{- $libFiles := .Files.Glob "lib/*" }}
   {{- range $file := $libFiles }}
-  {{ $file.Name | base }}: |
+  {{ $file | base }}: |
     {{ .Files.Get $file | nindent 8 }}
   {{- end }}
