--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -14,6 +14,6 @@ data:
   # Including all files inside the lib/ directory (recursively)
   {{- $libFiles := .Files.Glob "lib/**/*" }}
   {{- range $libFiles }}
-  {{ .Name | base }}: |
-    {{ .Data | nindent 8 }}
+  {{ . | base }}: |
+    {{ .Files.Get . | nindent 8 }}
   {{- end }}
