--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -4,18 +4,18 @@ metadata:
   name: xapp-script
 data:
   {{- $files := .Files }}
-  
+
   # Including specific files in the root directory
   {{- range tuple "xapp.py" "script2.py" }}
   {{ . }}: |-
-    {{ .Files.Get . | trim | indent 4 }}
+    {{ $files.Get . | trim | indent 4 }}
   {{- end }}
-  
+
   # Including all files inside the lib/ directory (recursively)
   {{- $libFiles := .Files.Glob "lib/**/*" }}
   {{- range $libFiles }}
-  {{- $filePath := . }}
-  {{ $baseName := base $filePath }}  # Extract the base name from the file path
+  {{- $filePath := . }}  # Store the full file path
+  {{- $baseName := base $filePath }}  # Extract the base name of the file
   {{ $baseName }}: |
-    {{ .Files.Get $filePath | nindent 8 }}  # Access the file content correctly
+    {{ $files.Get $filePath | nindent 8 }}  # Access the file content with the full path
   {{- end }}
