--- a/charts/python_xapp_runner/templates/configmap-script.yaml
+++ b/charts/python_xapp_runner/templates/configmap-script.yaml
@@ -8,14 +8,14 @@ data:
   # Including specific files in the root directory
   {{- range tuple "xapp.py" "script2.py" }}
   {{ . }}: |-
-    {{ $files.Get . | trim | indent 4 }}
+    {{- (string (.Files.Get .)) | trim | indent 4 }}
   {{- end }}
 
   # Including all files inside the lib/ directory (recursively)
   {{- $libFiles := .Files.Glob "lib/**/*" }}
   {{- range $libFiles }}
-  {{- $filePath := . }}  # Store the full file path
-  {{- $baseName := base $filePath }}  # Extract the base name of the file
+  {{- $filePath := . }}
+  {{- $baseName := base $filePath }}
   {{ $baseName }}: |
-    {{- $files.Get $filePath | nindent 8 }}  # Access the file content with the full path
+    {{- (string (.Files.Get $filePath)) | nindent 8 }}
   {{- end }}
