--- a/charts/appmgr/templates/service.yaml
+++ b/charts/appmgr/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-appmgr-service
+  name: {{ .Release.Name }}-service
   labels:
     app: appmgr
 spec:
