--- a/charts/rtmgr/templates/service.yaml
+++ b/charts/rtmgr/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
-    - port: {{ Values.serviceport.rtmgr.http }}
+    - port: {{ values.serviceport.rtmgr.http }}
       protocol: "TCP"
       name: "http"
       targetPort: "http"
